[gd_scene load_steps=12 format=3 uid="uid://b8742761vane7"]

[ext_resource type="Script" uid="uid://ynjjrbhrvwng" path="res://scripts/character.gd" id="1_rkhd4"]
[ext_resource type="Texture2D" uid="uid://bk2jfj2k2kp7p" path="res://assets/Hero_006.png" id="2_lrhn5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_my7n2"]
atlas = ExtResource("2_lrhn5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp8ca"]
atlas = ExtResource("2_lrhn5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lw5n"]
atlas = ExtResource("2_lrhn5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cgup"]
atlas = ExtResource("2_lrhn5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5ia6"]
atlas = ExtResource("2_lrhn5")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dpix"]
atlas = ExtResource("2_lrhn5")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2hyy3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_my7n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp8ca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lw5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cgup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5ia6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dpix")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkhd4"]
size = Vector2(12, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_rkhd4"]
radius = 3.1622777

[node name="MrDriller" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_rkhd4")

[node name="sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_2hyy3")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.57883847

[node name="body" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_rkhd4")

[node name="left_tool" type="Area2D" parent="."]
position = Vector2(-8, -7)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_tool"]
shape = SubResource("CircleShape2D_rkhd4")

[node name="head" type="Area2D" parent="."]
position = Vector2(0, -12)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="head"]
shape = SubResource("CircleShape2D_rkhd4")

[node name="bottom_tool" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom_tool"]
shape = SubResource("CircleShape2D_rkhd4")

[node name="right_tool" type="Area2D" parent="."]
position = Vector2(8, -7)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_tool"]
shape = SubResource("CircleShape2D_rkhd4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="head" to="." method="_on_head_body_entered"]
